<resources>
    <string name="app_name">WanAndroid</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="link_to_register">点击注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="re_password">重复密码</string>
    <string name="main_page">主页</string>
    <string name="wan">Wan</string>
    <string name="wc_account">公众号</string>
    <string name="mine">我的</string>
    <string name="knowledge_system">知识体系</string>
</resources>
