<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#FFFFFF"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <TextView
        android:layout_marginTop="40dp"
        android:textColor="#03A9F4"
        android:typeface="serif"
        android:textStyle="italic"
        android:text="@string/wan"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="85dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/CustomLineTheme"
        app:hintTextAppearance="@style/hintAppearance"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="80dp">
        <EditText
            android:id="@+id/edit_username"
            android:maxLines="1"
            android:maxWidth="300dp"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/CustomLineTheme"
        app:hintTextAppearance="@style/hintAppearance"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="26dp"
        android:layout_width="320dp"
        android:layout_height="80dp">
        <EditText
            android:id="@+id/edit_password"
            android:maxLines="1"
            android:maxWidth="300dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/CustomLineTheme"
        app:hintTextAppearance="@style/hintAppearance"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="26dp"
        android:layout_width="320dp"
        android:layout_height="80dp">
        <EditText
            android:id="@+id/edit_re_password"
            android:maxLines="1"
            android:maxWidth="300dp"
            android:inputType="textPassword"
            android:hint="@string/re_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/bt_register"
        android:text="@string/register"
        android:textSize="18sp"
        android:layout_marginTop="26dp"
        android:layout_gravity="center"
        android:background="#03A9F4"
        android:layout_width="320dp"
        android:layout_height="40dp"/>
</LinearLayout>